# mensa-api-public

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  __main__.py  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml  sample.env
.github/workflows/: ci.yaml  pre-commit.yml  semgrep.yml  update_workspace_groups.yaml
docs/: db_cleanup_queries.txt  iam_groups_and_roles.txt  whatsapp_group_classification.md
people_api/: __init__.py  __main__.py  app.py  auth.py  dbs.py  entrypoints.py  enums.py  exceptions.py  otel_middleware.py  repositories.py  routers.py  schemas.py  settings.py  utils.py
people_api/cronjobs/workspace_groups/: settings.py  update_workspace_groups.py
people_api/cronjobs/workspace_groups/helpers/: core.py  get_service.py  orm_queries.py
people_api/database/: alembic.ini
people_api/database/alembic/: env.py
people_api/database/alembic/versions/: 035aae50e37d_drop_wpp_messages_constraints.py  04447ce1b06b_volunteer_recognition_platform.py  0f29579690ba_add_whatsapp_authorization_table.py  128086567422_pending_registration.py  1b2e91014b4e_add_triggers.py  236c0ee11888_add_effectivation_column.py  280e7b2d8757_update_evaluator_id_column.py  31cf9aebbbe8_change_whatsapp_comms_name_and_default_.py  34866525c9ec_add_timestamp_column_whatsapp_comms.py  37efd1521b12_change_group_requests.py  4cf0d9c18cef_add_whatsapp_message_table.py  55498956723f_add_whatsapp_message_column.py  6450aa894cb9_feedback_column_creation.py  6dda2e6dc27f_drop_communication_date_latlong.py  7dc2acaa5517_refactor_authorization_tables.py  7f4a0eca6562_add_default_no_of_attempts.py  87342b0f0e7f_add_whatsapp_message_column.py  884c047eea7a_add_worker_phone_constraint.py  8b918650460a_add_default_entry_date.py  8eccef203631_add_roles_and_groups_tables.py  a6c710d95905_volunteer_role.py  a928e2f93515_add_constraints_to_whatsapp_comms.py  bb9eb342be3d_update_fkeys_and_constraints_on_iam.py  bfdb84a1c6ce_add_email_sent_column.py  c4c4ea41ac02_initial_migration.py  da883f951481_add_discord_id_column.py  e745774137c2_add_whatsapp_message_column.py  e97ed03b2941_add_beta_tester_column.py  f664e9ce0180_add_default_join_date.py
people_api/database/models/: __init__.py  data.py  email_sending.py  feedback.py  iam_model.py  models.py  pending_registration.py  types.py  volunteer.py  whatsapp.py
people_api/endpoints/: __init__.py  certificate.py  data.py  errors.py  feedback.py  google_workspace.py  group.py  iam.py  member_address.py  member_email.py  member_legal_representative.py  member_misc.py  member_onboarding.py  member_phone.py  missing_fields.py  oauth.py  volunteer.py  whatsapp.py
people_api/models/: __init__.py  asaas.py  common.py  errors.py  fields.py  member.py  member_data.py  person_create.py  person_read.py  person_update.py
people_api/permissions/: __init__.py  admin.py  volunteer.py
people_api/scripts/: redrive_dlq.py
people_api/services/: __init__.py  address_service.py  certificate_service.py  data_service.py  discord_service.py  email_sending_service.py  email_service.py  feedback_service.py  group_service.py  iam_service.py  legal_representative_service.py  member_onboarding.py  member_utils.py  membership_payment_service.py  misc_service.py  missing_fields_service.py  openai_service.py  phone_service.py  registration_service.py  sqs_handler.py  twilio_service.py  workspace_service.py
people_api/services/whatsapp_service/: utils.py
people_api/services/whatsapp_service/chatbot/: client.py  message_handler.py  openai_service.py  thread_handler.py  tool_calls_handler.py  validation.py  wpp_client_helpers.py
people_api/static/: __init__.py  download_cert.py
tests/: conftest.py  router_config.py  test_auth.py  test_data.py  test_db_dump.sql  test_feedback.py  test_group.py  test_iam.py  test_member.py  test_member_address.py  test_member_email.py  test_member_legal_representative.py  test_member_phone.py  test_oauth.py  test_payment_options.py  test_sqs_handler.py  test_volunteer.py  test_whatsapp.py
tests/member_onboarding/: customer_created.json  payment_created.json  test_member_onboarding.py  webhook_request.json
tests/whatsapp/: test_update_data.py
tests/whatsapp/chatbot/: test_client.py  test_helpers.py  test_message_handler.py  test_thread_handler.py  test_tool_calls_handler.py  test_validation.py
utils/: generate_token.py  reset_db.py
